--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,9 +11,10 @@ main:
     url: '#experience'
     weight: 20
   - name: Publications
-    url: 'publication'
+    url: '#featured'
     weight: 30
-
+  - name: News
+    url: '#news'
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
