--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -15,6 +15,13 @@ main:
     weight: 30
   - name: News
     url: '#news'
+  - name: CV
+    url: uploads/Anna_Ivanova_CV.pdf
+    weight: 40
+  - name: Thesis
+    url: uploads/Anna_Ivanova_thesis.pdf
+    weight: 50
+  
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
