--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,8 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: 'Postdoctoral associate at MIT studying language and cognition.'
+    twitter: ''
   analytics:
     google_analytics: ''
     baidu_tongji: ''
