site description update

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Postdoctoral associate at MIT studying language and cognition.'
+    description: 'Assistant Professor of Psychology at Georgia Tech studying language and cognition'
     twitter: ''
   analytics:
     google_analytics: ''
